# hello-rocket

./: Cargo.toml  README.md  database.sqlite
migrations/2021-07-25-063805_create_products/: down.sql  up.sql
src/: main.rs  schema.rs
